// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationsQuerySchema > matches snapshot 1`] = `
{
  "page": ZodDefault {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "defaultValue": 1,
      "innerType": ZodNumber {
        "and": [Function],
        "apply": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "checks": [
            ZodNumberFormat {
              "and": [Function],
              "apply": [Function],
              "array": [Function],
              "brand": [Function],
              "catch": [Function],
              "check": [Function],
              "clone": [Function],
              "decode": [Function],
              "decodeAsync": [Function],
              "def": {
                "abort": false,
                "check": "number_format",
                "format": "safeint",
                "type": "number",
              },
              "default": [Function],
              "describe": [Function],
              "encode": [Function],
              "encodeAsync": [Function],
              "exactOptional": [Function],
              "finite": [Function],
              "format": "safeint",
              "gt": [Function],
              "gte": [Function],
              "int": [Function],
              "isFinite": true,
              "isInt": true,
              "isNullable": [Function],
              "isOptional": [Function],
              "lt": [Function],
              "lte": [Function],
              "max": [Function],
              "maxValue": 9007199254740991,
              "meta": [Function],
              "min": [Function],
              "minValue": -9007199254740991,
              "multipleOf": [Function],
              "negative": [Function],
              "nonnegative": [Function],
              "nonoptional": [Function],
              "nonpositive": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "overwrite": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "pipe": [Function],
              "positive": [Function],
              "prefault": [Function],
              "readonly": [Function],
              "refine": [Function],
              "register": [Function],
              "safe": [Function],
              "safeDecode": [Function],
              "safeDecodeAsync": [Function],
              "safeEncode": [Function],
              "safeEncodeAsync": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "toJSONSchema": [Function],
              "transform": [Function],
              "type": "number",
              "with": [Function],
            },
            $ZodCheckGreaterThan {},
          ],
          "coerce": true,
          "type": "number",
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "exactOptional": [Function],
        "finite": [Function],
        "format": "safeint",
        "gt": [Function],
        "gte": [Function],
        "int": [Function],
        "isFinite": true,
        "isInt": true,
        "isNullable": [Function],
        "isOptional": [Function],
        "lt": [Function],
        "lte": [Function],
        "max": [Function],
        "maxValue": 9007199254740991,
        "meta": [Function],
        "min": [Function],
        "minValue": 0,
        "multipleOf": [Function],
        "negative": [Function],
        "nonnegative": [Function],
        "nonoptional": [Function],
        "nonpositive": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "positive": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safe": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "toJSONSchema": [Function],
        "transform": [Function],
        "type": "number",
        "with": [Function],
      },
      "type": "default",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "exactOptional": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "removeDefault": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "toJSONSchema": [Function],
    "transform": [Function],
    "type": "default",
    "unwrap": [Function],
    "with": [Function],
  },
  "perPage": ZodDefault {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "defaultValue": 20,
      "innerType": ZodNumber {
        "and": [Function],
        "apply": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "checks": [
            ZodNumberFormat {
              "and": [Function],
              "apply": [Function],
              "array": [Function],
              "brand": [Function],
              "catch": [Function],
              "check": [Function],
              "clone": [Function],
              "decode": [Function],
              "decodeAsync": [Function],
              "def": {
                "abort": false,
                "check": "number_format",
                "format": "safeint",
                "type": "number",
              },
              "default": [Function],
              "describe": [Function],
              "encode": [Function],
              "encodeAsync": [Function],
              "exactOptional": [Function],
              "finite": [Function],
              "format": "safeint",
              "gt": [Function],
              "gte": [Function],
              "int": [Function],
              "isFinite": true,
              "isInt": true,
              "isNullable": [Function],
              "isOptional": [Function],
              "lt": [Function],
              "lte": [Function],
              "max": [Function],
              "maxValue": 9007199254740991,
              "meta": [Function],
              "min": [Function],
              "minValue": -9007199254740991,
              "multipleOf": [Function],
              "negative": [Function],
              "nonnegative": [Function],
              "nonoptional": [Function],
              "nonpositive": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "overwrite": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "pipe": [Function],
              "positive": [Function],
              "prefault": [Function],
              "readonly": [Function],
              "refine": [Function],
              "register": [Function],
              "safe": [Function],
              "safeDecode": [Function],
              "safeDecodeAsync": [Function],
              "safeEncode": [Function],
              "safeEncodeAsync": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "toJSONSchema": [Function],
              "transform": [Function],
              "type": "number",
              "with": [Function],
            },
            $ZodCheckGreaterThan {},
            $ZodCheckLessThan {},
          ],
          "coerce": true,
          "type": "number",
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "exactOptional": [Function],
        "finite": [Function],
        "format": "safeint",
        "gt": [Function],
        "gte": [Function],
        "int": [Function],
        "isFinite": true,
        "isInt": true,
        "isNullable": [Function],
        "isOptional": [Function],
        "lt": [Function],
        "lte": [Function],
        "max": [Function],
        "maxValue": 100,
        "meta": [Function],
        "min": [Function],
        "minValue": 0,
        "multipleOf": [Function],
        "negative": [Function],
        "nonnegative": [Function],
        "nonoptional": [Function],
        "nonpositive": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "positive": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safe": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "toJSONSchema": [Function],
        "transform": [Function],
        "type": "number",
        "with": [Function],
      },
      "type": "default",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "exactOptional": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "removeDefault": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "toJSONSchema": [Function],
    "transform": [Function],
    "type": "default",
    "unwrap": [Function],
    "with": [Function],
  },
  "status": ZodOptional {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "innerType": ZodEnum {
        "and": [Function],
        "apply": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "entries": {
            "failed": "failed",
            "pending": "pending",
            "read": "read",
            "sent": "sent",
          },
          "type": "enum",
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "enum": {
          "failed": "failed",
          "pending": "pending",
          "read": "read",
          "sent": "sent",
        },
        "exactOptional": [Function],
        "exclude": [Function],
        "extract": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "options": [
          "pending",
          "sent",
          "failed",
          "read",
        ],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "toJSONSchema": [Function],
        "transform": [Function],
        "type": "enum",
        "with": [Function],
      },
      "type": "optional",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "exactOptional": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "toJSONSchema": [Function],
    "transform": [Function],
    "type": "optional",
    "unwrap": [Function],
    "with": [Function],
  },
  "unread": ZodOptional {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "innerType": ZodBoolean {
        "and": [Function],
        "apply": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "coerce": true,
          "type": "boolean",
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "exactOptional": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "toJSONSchema": [Function],
        "transform": [Function],
        "type": "boolean",
        "with": [Function],
      },
      "type": "optional",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "exactOptional": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "toJSONSchema": [Function],
    "transform": [Function],
    "type": "optional",
    "unwrap": [Function],
    "with": [Function],
  },
}
`;

exports[`ReadAllResponseSchema > matches snapshot 1`] = `
{
  "updatedCount": ZodNumber {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "checks": [
        ZodNumberFormat {
          "and": [Function],
          "apply": [Function],
          "array": [Function],
          "brand": [Function],
          "catch": [Function],
          "check": [Function],
          "clone": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "abort": false,
            "check": "number_format",
            "format": "safeint",
            "type": "number",
          },
          "default": [Function],
          "describe": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "exactOptional": [Function],
          "finite": [Function],
          "format": "safeint",
          "gt": [Function],
          "gte": [Function],
          "int": [Function],
          "isFinite": true,
          "isInt": true,
          "isNullable": [Function],
          "isOptional": [Function],
          "lt": [Function],
          "lte": [Function],
          "max": [Function],
          "maxValue": 9007199254740991,
          "meta": [Function],
          "min": [Function],
          "minValue": -9007199254740991,
          "multipleOf": [Function],
          "negative": [Function],
          "nonnegative": [Function],
          "nonoptional": [Function],
          "nonpositive": [Function],
          "nullable": [Function],
          "nullish": [Function],
          "optional": [Function],
          "or": [Function],
          "overwrite": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "pipe": [Function],
          "positive": [Function],
          "prefault": [Function],
          "readonly": [Function],
          "refine": [Function],
          "register": [Function],
          "safe": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "step": [Function],
          "superRefine": [Function],
          "toJSONSchema": [Function],
          "transform": [Function],
          "type": "number",
          "with": [Function],
        },
        $ZodCheckGreaterThan {},
      ],
      "type": "number",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "exactOptional": [Function],
    "finite": [Function],
    "format": "safeint",
    "gt": [Function],
    "gte": [Function],
    "int": [Function],
    "isFinite": true,
    "isInt": true,
    "isNullable": [Function],
    "isOptional": [Function],
    "lt": [Function],
    "lte": [Function],
    "max": [Function],
    "maxValue": 9007199254740991,
    "meta": [Function],
    "min": [Function],
    "minValue": 0,
    "multipleOf": [Function],
    "negative": [Function],
    "nonnegative": [Function],
    "nonoptional": [Function],
    "nonpositive": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "positive": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "safe": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "step": [Function],
    "superRefine": [Function],
    "toJSONSchema": [Function],
    "transform": [Function],
    "type": "number",
    "with": [Function],
  },
}
`;
